tests clean-up
